# primes

./: .gitignore  Cargo.toml
benches/: naive.rs
src/: eratosthenes.rs  lib.rs  properties.rs
src/naive/: mod.rs  tests.rs
