[package]
name = "primes"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.1"

[dev-dependencies]
quickcheck = "0.9.0"
quickcheck_macros = "0.8.0"